few quick fixes on mobile responsiveness

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -59,7 +59,7 @@
 
   .menu-img {
     top: 4.8vh;
-    left: 38%;
+    left: 40%;
     width: 150px;
     height: 150px;
     background: url('../img/profile-pic-xsmall.jpg');
@@ -85,6 +85,15 @@
 
 // Smartphones
 @include mediaSm {
+  .nav-item {
+    font-size: 1rem;
+    line-height: 1;
+  }
+
+  .menu-nav {
+    min-height: calc(60vh - 45px);
+  }
+
   main {
     padding: 1.4rem;
 
@@ -100,5 +109,36 @@
   }
   .projects {
     grid-template-columns: 1fr;
+  }
+
+  .menu-img {
+    top: 1.8vh;
+    left: 30%;
+    width: 150px;
+    height: 150px;
+    background: url('../img/profile-pic-xsmall.jpg');
+    background-size: cover;
+    transform: translate3d(300%, 0, 0);
+    @include easeOut;
+  }
+
+  .boxes {
+    div {
+      padding: 0.3rem;
+      width: 90%;
+      font-size: 1.1rem;
+      @include easeOut;
+      &:hover:nth-child(1) {
+        padding-top: 0.1rem;
+        // padding-left: 0.3rem;
+        text-align: center;
+        justify-content: center;
+        font-size: 1.2rem;
+      }
+
+      .text-secondary {
+        font-weight: 600;
+      }
+    }
   }
 }
